Basic level system with camera movements added level based camera view updated include hierarchy

--- a/Rocket_Rush/Rocket_Rush.vcxproj.filters
+++ b/Rocket_Rush/Rocket_Rush.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="LevelMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LevelMaker.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
