--- a/Rocket_Rush/Rocket_Rush.vcxproj
+++ b/Rocket_Rush/Rocket_Rush.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="LevelMaker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.hpp" />
+    <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="LevelMaker.hpp" />
     <ClInclude Include="Particle.hpp" />
