--- a/Rocket_Rush/Rocket_Rush.vcxproj.filters
+++ b/Rocket_Rush/Rocket_Rush.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.hpp">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ui.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
